# nebula-gears

./: .gitignore  CMakeLists.txt  README.md  install  nebula-gears-steps.md  rpmbuild.sh
.github/workflows/: build.yml  release.yml
aux/: self-extractable.sh.in
docker/images/: Makefile  build-gcc.sh  build-llvm.sh  oss-upload.sh  run.sh
docker/images/aarch64/: centos-7.Dockerfile  debian-8.Dockerfile  debian-9.Dockerfile
docker/images/buildx/: centos-7.Dockerfile  centos-8.Dockerfile  centos.Dockerfile  debian-10.Dockerfile  debian-8.Dockerfile  debian-9.Dockerfile  debian.Dockerfile
docker/images/x86_64/: centos-7.Dockerfile  debian-8.Dockerfile  debian-9.Dockerfile
docker/toolset/images/: Makefile  build-gcc.sh  build-gdb.sh  build-llvm.sh  centos-6.Dockerfile  centos-7.Dockerfile  centos-8.Dockerfile  debian-10.Dockerfile  debian-7.Dockerfile  debian-8.Dockerfile  debian-9.Dockerfile
etc/: CMakeLists.txt  nebula.gdb
scripts/: CMakeLists.txt  arch-type  build-cmake  build-gcc  build-gdb  build-llvm  core-bt  core-bt-batch  core-execname  core-save-to  distro-fullname  distro-name  distro-version  hyper-threads  install-cmake  install-gcc  install-gdb  install-llvm  least-libc-version  libc-version  mem-available  mem-free  mem-total  nebula-gears-show-files  nebula-gears-uninstall  nebula-gears-update  package-type  physical-cores  psyscall  pthreads  sodag  syscheck  system-info
share/: CMakeLists.txt
share/nebula-gears/: gcc-tarball-info-10.1.0  gcc-tarball-info-11.2.0  gcc-tarball-info-13.4.0  gcc-tarball-info-5.1.0  gcc-tarball-info-5.3.0  gcc-tarball-info-5.5.0  gcc-tarball-info-6.1.0  gcc-tarball-info-6.3.0  gcc-tarball-info-6.5.0  gcc-tarball-info-7.1.0  gcc-tarball-info-7.3.0  gcc-tarball-info-7.5.0  gcc-tarball-info-8.1.0  gcc-tarball-info-8.2.0  gcc-tarball-info-8.3.0  gcc-tarball-info-9.1.0  gcc-tarball-info-9.2.0  gcc-tarball-info-9.3.0  gcc-tarball-info-9.4.0  gcc-tarball-info-9.5.0  gdb-tarball-info-8.3  gdb-tarball-info-9.1  llvm-tarball-info-10.0.0  llvm-tarball-info-8.0.0  llvm-tarball-info-9.0.0
src/: CMakeLists.txt  elf-isa.cpp  elf-size.cpp  elfis.cpp
src/tools/: CMakeLists.txt  demo.cpp  pthreads.cpp
src/utils/: CMakeLists.txt  Status.cpp  Status.h  StatusOr.h  cpp.h  fs.cpp  fs.h  string.cpp  string.h
